fix: spacing issues and wrong dimensions

--- a/global.css
+++ b/global.css
@@ -69,7 +69,7 @@ nav {
   justify-content: space-evenly;
 }
 .nav-links > * {
-  margin: 0 5px;
+  margin: 0 10px;
 }
 
 @media screen and (max-width: 800px) {
@@ -79,8 +79,12 @@ nav {
     justify-content: center;
   }
   .nav-content > * {
+    margin: 2px 0;
+
+  }
+  .nav-content * {
     justify-content: center;
-    margin: 5px 0;
+    font-size: 18px;
   }
 }
 
