--- a/style.css
+++ b/style.css
@@ -17,6 +17,12 @@
   padding: 2.5%;
 }
 
+.hello-world img {
+  border-radius: 100%;
+  width: 500px;
+  height: 500px;
+}
+
 @media screen and (max-width: 800px) {
   .hello-world {
     justify-content: center;
@@ -24,10 +30,11 @@
     flex-direction: column;
     text-align: center
   }
+
+  .hello-world img {
+    width: 100%;
+    height: 100%;
+  }
 }
 
-.hello-world img {
-  border-radius: 100%;
-  width: 500px;
-  height: 500px;
-}
+
